--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h2>A step-by-step walk through of your first HTML page</h2>
     </div>
     <div>
-      <img scr = "/home/tanishq/Desktop/Full Stack Developemet/HTML/Basics/1.jpg" >
+      <img scr = "/1.jpg" >
     </div>
     <div>
         <p>
@@ -22,7 +22,7 @@
         </p>
     </div>
     <div>
-      <img scr = "/home/tanishq/Desktop/Full Stack Developemet/HTML/Basics/2.jpg" >
+      <img scr = "/2.jpg" >
     </div>
     
     <div>
