--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <body>
     <div>
         <h2>A step-by-step walk through of your first HTML page</h2>
+        <link rel="icon" type="image/x-icon" href="/MyIcon.ico">
+        <meta name="keywords" content="sachinbhawar, first, html, page, Sachin Bhawar" />
     </div>
     <div>
       <img scr = "/home/tanishq/Desktop/Full Stack Developemet/HTML/Basics/1.jpg" >
