--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <title>Walk through your first HTML page</title>
+    <link rel="icon" type="image/x-icon" href="/MyIcon.ico">
+    <meta name="keywords" content="sachinbhawar, first, html, page, Sachin Bhawar" />
   </head>
   <body>
     <div>
         <h2>A step-by-step walk through of your first HTML page</h2>
     </div>
+    
     <div>
       <img scr = "/1.jpg" >
     </div>
